fixing tap on mobile

--- a/client/src/components/LoginComponent/style.css
+++ b/client/src/components/LoginComponent/style.css
@@ -16,3 +16,7 @@ div.row.loginbox {
     bottom: 0;
     margin: auto;
 }
+
+.btn {
+    cursor: pointer;
+}
